[Aryan] Add: Implemented forgetPassword API along with swagger implementation and rspec testing as well
